<resources>

    <!-- Generic Strings -->
    <string name="app_name">AppSAS</string>

    <!-- Login Activity Strings -->
    <string name="prompt_user">Usuario</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Login</string>
    <string name="error_invalid_user">Formato de usuario incorrecto</string>
    <string name="error_invalid_password">El password es muy corto</string>
    <string name="error_incorrect_password">Password incorrecto</string>
    <string name="error_field_required">El campo es requerido</string>
    <string name="error_ivalid_date">La fecha es incorrecta (antes de nacer)</string>

    <!-- Home Activity Strings -->
    <string name="str_btn_get_docentes">Listar Docentes</string>
    <string name="crear_docente">Crear Docente</string>
    <string name="evento_atras">Para salir presione nuevamente</string>

    <!-- Create Docente Activity Strings -->
    <string name="apellido">Apellido:</string>
    <string name="nombre">Nombre:</string>
    <string name="documento">Documento:</string>
    <string name="telefono">Telefono:</string>
    <string name="correo">Correo:</string>
    <string name="fechaNac">Fecha de nacimiento</string>
    <string name="fechaIng">Fecha de ingreso</string>
    <string name="fechaEgr">Fecha de Egreso</string>
    <string name="title_activity_login">Sign in</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="usuario">Usuario:</string>
    <string name="contraseña">Contraseña:</string>
    <string name="ingresar">Ingresar</string>
    <string name="btn_create_doc">Crear</string>
    <string name="btn_f_nacimiento">Fecha Nac.</string>
    <string name="btn_f_ingreso">Fecha Ingreso</string>
    <string name="btn_f_egreso">Fecha Egreso</string>
    <string name="btn_f_mat">Fecha Mat.</string>
    <string name="titulo">INGRESE SU USUARIO Y PASSWORD</string>
    <string name="titulo_crear_docente">INGRESE LOS DATOS DEL DOCENTE</string>
    <string name="tst_crear_docente_ok">Docente creado exitosamente</string>

    <!-- Listar Estudiante Activity String  -->
    <string name="fechaMat">Fecha de primer matricula:</string>
    <string name="titulo_crear_estudiante">INGRESE LOS DATOS DEL ESTUDIATE</string>

    <!-- Validaciones String  -->
    <string name="error_correo">No es un correo valido </string>
    <string name="error_documento">Documento no es valido</string>
    <string name="error_nombre">No caracteres especiales ni espacios</string>




    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
