<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="utec.edu.uy.appsas.CrearDocActivity"
    tools:layout_editor_absoluteY="0dp"
    tools:layout_editor_absoluteX="0dp">

    <include
        android:id="@+id/toolbarAppSAS"
        layout="@layout/toolbar"
        android:layout_height="0dp"
        android:layout_width="0dp"
        app:layout_constraintRight_toLeftOf="parent"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_crear_docente"
        style="@style/Titulo"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="77dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button4"
        style="@style/ButtonStyle"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:onClick="create_docente"
        android:text="@string/btn_create_doc"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="9dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="9dp"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="63dp"
        android:layout_marginLeft="9dp"
        android:layout_marginRight="9dp" />

    <LinearLayout
        android:layout_width="254dp"
        android:layout_height="175dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/linearLayout3"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="65dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="65dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="121dp"
        android:layout_marginLeft="65dp"
        android:layout_marginRight="65dp"
        app:layout_constraintHorizontal_bias="0.0">

        <EditText
            android:id="@+id/edit_fecha_nac"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:ems="10"
            android:hint="@string/fechaNac"
            android:inputType="textPersonName"
            android:onClick="fecha_nacimiento"
            tools:layout_editor_absoluteX="100dp"
            tools:layout_editor_absoluteY="289dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <EditText
            android:id="@+id/edit_fecha_ing"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:ems="10"
            android:hint="@string/fechaIng"
            android:inputType="textPersonName"
            android:onClick="fecha_ingreso"
            tools:layout_editor_absoluteX="109dp"
            tools:layout_editor_absoluteY="345dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <EditText
            android:id="@+id/edit_fecha_egre"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:ems="10"
            android:hint="@string/fechaEgr"
            android:inputType="textPersonName"
            android:onClick="fecha_egreso"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="402dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/msg_error"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textAlignment="center"
        android:textStyle="bold"
        android:paddingLeft="80dp"
        android:textSize="20dp"
        android:paddingStart="80dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/button4"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent" />

    <LinearLayout
        android:layout_width="180dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="@+id/linearLayout"
        android:id="@+id/linearLayout2">

        <EditText
            android:id="@+id/edit_telefono"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:ems="10"
            android:hint="@string/telefono"
            android:inputType="phone"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="226dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <EditText
            android:id="@+id/edit_documento"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:ems="10"
            android:hint="@string/documento"
            android:inputType="number"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="167dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <EditText
            android:id="@+id/edit_nombre"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:ems="10"
            android:hint="@string/nombre"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="108dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:id="@+id/linearLayout"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="40dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="29dp"
        app:layout_constraintTop_toTopOf="@+id/textView"
        app:layout_constraintLeft_toRightOf="@+id/linearLayout2"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="4dp">

        <EditText
            android:id="@+id/edit_apellido"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:ems="10"
            android:hint="@string/apellido"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="198dp"
            tools:layout_editor_absoluteY="109dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <Spinner
            android:id="@+id/spinner"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:ems="10"
            tools:layout_editor_absoluteX="204dp"
            tools:layout_editor_absoluteY="167dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <EditText
            android:id="@+id/edit_correo"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:ems="10"
            android:hint="@string/correo"
            android:inputType="textWebEmailAddress"
            tools:layout_editor_absoluteX="198dp"
            tools:layout_editor_absoluteY="226dp" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
