<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/estudinate_imagen_lista2"
        android:layout_marginBottom="473dp"
        android:layout_marginRight="259dp"
        android:layout_marginEnd="259dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="131dp"
        android:layout_marginStart="131dp"
        android:layout_marginTop="50dp"
        android:text="@string/documento"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="14dp"
        android:text="@string/telefono" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/fechaNac"
        android:layout_below="@+id/textView17"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView10"
        android:layout_marginLeft="11dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="12dp"
        android:text="@string/fechaMat" />

    <TextView
        android:id="@+id/tv_nombre_est"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp" />

    <TextView
        android:id="@+id/tv_documento_est"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView2"
        android:layout_marginLeft="23dp"
        android:layout_marginStart="23dp"
        android:layout_toEndOf="@+id/textView2"
        android:layout_toRightOf="@+id/textView2" />

    <TextView
        android:id="@+id/tv_telefono_est"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView3"
        android:layout_toEndOf="@+id/textView2"
        android:layout_toRightOf="@+id/textView2" />

    <TextView
        android:id="@+id/tv_fecha_nac_est"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView10"
        android:layout_alignBottom="@+id/textView10"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_toEndOf="@+id/textView10"
        android:layout_toRightOf="@+id/textView10" />

    <TextView
        android:id="@+id/tv_fecha_mat_est"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView11"
        android:layout_alignBottom="@+id/textView11"
        android:layout_alignLeft="@+id/tv_nombre_est"
        android:layout_alignStart="@+id/tv_nombre_est" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="16dp"
        android:text="@string/correo" />

    <TextView
        android:id="@+id/tv_correo_est"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView17"
        android:layout_toEndOf="@+id/textView3"
        android:layout_toRightOf="@+id/textView3" />
</RelativeLayout>